<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RSAMessageApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="generate_rsa_keys">Generate RSA keys</string>
    <string name="encrypt_decrypt">Encrypt / Decrypt</string>
    <string name="sign_verify">Sign / Verify</string>
    <string name="generate_rsa_description">First, you must generate your public/private keypair</string>
    <string name="encrypt_decrypt_description">Now, you can try to encrypt and decrypt some text that you insert</string>
    <string name="sign_verify_description">Last step is to sign and verify that the encrypted message comes from the right person</string>
    <string name="clear">Clear</string>
    <string name="rsa_key_generated">RSA Key generated</string>
    <string name="generate_rsa">Generate RSA Key Pair</string>
    <string name="title">RSA Example</string>
    <string name="encrypt">Encrypt / Decrypt</string>
    <string name="send">Send SMS</string>
    <string name="sendRSA">Send encrypted SMS</string>
    <string name="verify">Verify / Sign</string>
    <string name="phone_number_to_send">Enter phone number to send message:</string>
    <string name="message_to_be_encrypted">Message to be encrypted:</string>
    <string name="info_message">You have no message.</string>
    <string name="load">Loading</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    


</resources>
